add some sections, icon font and links

--- a/index.html
+++ b/index.html
@@ -4,10 +4,225 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Creative digital projects</title>
+    <link rel="stylesheet" href="assets/style/font.css">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="container">
+            <div class="header_logo">
+                <!-- TODO: IMG -->
+            </div>
+            <ul class="header_menu-list">
+                <li class="header_menu-item"><a href="#">Home</a></li>
+                <li class="header_menu-item"><a href="#">About</a></li>
+                <li class="header_menu-item"><a href="#">Services</a></li>
+                <li class="header_menu-item"><a href="#">Works</a></li>
+                <li class="header_menu-item"><a href="#">Contact</a></li>
+            </ul>
+        </div>
+    </header>
+    <main>
+        <section class="big-screen" id="big-screen">
+            <div class="container">
+                <h1 class="big-screen_title">Creative digital projects</h1>
+                <p class="big-screen_description">
+                    Duis mollis, est non commodo luctus,
+                    nisi erat porttitor ligula, eget lacinia odio sem nec elit.
+                </p>
+            </div>
+        </section>
+        <section class="about">
+            <div class="container flex">               
+                <div class="about_image-block">
+                    <!-- TODO: img bg -->
+                    <!-- TODO svg -->
+                    <div class="about_text">About Us</div>
+                </div>
+                <div class="about_text-block">
+                    <p class="about_description uper">
+                        Nullam quis risus eget urna <b>mollis ornare</b> vel eu leo. Donec id elit non mi porta gravida at eget metus.
+                        Donec ullamcorper 
+                        nulla non metus auctor fringilla. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
+                    </p>
+                    <p class="about_description lower">
+                        <b>Morbi leo risus,</b> porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum 
+                        faucibus dolor auctor. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Maecenas 
+                        faucibus mollis interdum. Cras mattis consectetur purus sit amet fermentum. Sed posuere consectetur est at lobortis.
+                    </p>
+                    <a href="#" class="btn about_btn">Learn More</a>
+                </div>
+            </div>
+        </section>
+        <section class="services">
+            <div class="container grid">
+                <ul class="services_list">
+                    <li class="services_item">
+                        <!-- TODO: svg -->
+                        <h6 class="services_title">
+                            Graphic Design
+                        </h6>
+                        <div class="services_description">
+                            Cras mattis consectetur purus sit amet fermentum.
+                        </div>
+                    </li>
+                    <li class="services_item">
+                        <!-- TODO: svg -->
+                        <h6 class="services_title">
+                            Web Development
+                        </h6>
+                        <div class="services_description">
+                            Cras mattis consectetur purus sit amet fermentum.
+                        </div>
+                    </li>
+                    <li class="services_item">
+                        <!-- TODO: svg -->
+                        <h6 class="services_title">
+                            Seo & Marketing
+                        </h6>
+                        <div class="services_description">
+                            Cras mattis consectetur purus sit amet fermentum.
+                        </div>
+                    </li>
+                    <li class="services_item">
+                        <!-- TODO: svg -->
+                        <h6 class="services_title">
+                            Mobile Development
+                        </h6>
+                        <div class="services_description">
+                            Cras mattis consectetur purus sit amet fermentum.
+                        </div>
+                    </li>
+                    <li class="services_item">
+                        <!-- TODO: bg img -->
+                        <!-- TODO: svg -->
+                        <h6 class="services_title">
+                            Our Services
+                        </h6>
+                        <div class="services_description">
+                            “Nullam quis risus eget urna mollis ornare vel eu leo. Nulla vitae elit libero, a pharetra augue.”
+                            <b>- Borat -</b>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="works">
+            <!-- TODO: svg -->
+            <h2 class="works_title">Recent works</h2>
+            <ul class="works_slider" id="works_slider">
+                <li class="works_slider-item">
+                    <!-- TODO: img -->
+                </li>
+                <li class="works_slider-item">
+                    <!-- TODO: img -->
+                </li>
+                <li class="works_slider-item">
+                    <!-- TODO: img -->
+                </li>
+                <li class="works_slider-item">
+                    <!-- TODO: img -->
+                </li>
+            </ul>
+        </section>
+        <section class="team">
+            <div class="container">
+                <!-- TODO: svg -->
+                <h2 class="team_title">Meet our team</h2>
+                <ul class="team_slider" id="team_slider">
+                    <li class="slider_item">
+                        <div class="member_photo">
+                            <img src="#" alt="name">
+                        </div>
+                        <div class="member_name">
+                            Miguel Orbien
+                        </div>
+                        <div class="member_position">
+                            CEO & Founder
+                        </div>
+                        <ul class="member_soc-list">
+                            <li class="member_soc-item"><a href="https://www.linkedin.com/" target="_blank" rel="noreferrer nofollow" title="linkedin"><i class="icon icon-linkedin2"></i></a></li>
+                            <li class="member_soc-item"><a href="https://www.instagram.com/?hl=ru" target="_blank" rel="noreferrer nofollow" title="googleplus"><i class="icon icon-google-plus"></i></a></li>
+                            <li class="member_soc-item"><a href="https://www.facebook.com/" target="_blank" rel="noreferrer nofollow" title="facebook"><i class="icon icon-facebook"></i></a></li>
+                            <li class="member_soc-item"><a href="https://twitter.com/?lang=ru" target="_blank" rel="noreferrer nofollow" title="twitter"><i class="icon icon-twitter"></i></a></li>
+                        </ul>
+                    </li>
+                    <li class="slider_item">
+                        <div class="member_photo">
+                            <img src="#" alt="name">
+                        </div>
+                        <div class="member_name">
+                            Jackie Carrol
+                        </div>
+                        <div class="member_position">
+                            Art Director
+                        </div>
+                        <ul class="member_soc-list">
+                            <li class="member_soc-item"><a href="https://www.behance.net/" target="_blank" rel="noreferrer nofollow" title="behance"><i class="icon icon-behance"></i></a></li>
+                            <li class="member_soc-item"><a href="https://www.linkedin.com/" target="_blank" rel="noreferrer nofollow" title="linkedin"><i class="icon icon-linkedin2"></i></a></li>
+                            <li class="member_soc-item"><a href="https://www.instagram.com/?hl=ru" target="_blank" rel="noreferrer nofollow" title="googleplus"><i class="icon icon-google-plus"></i></a></li>
+                            <li class="member_soc-item"><a href="https://www.facebook.com/" target="_blank" rel="noreferrer nofollow" title="facebook"><i class="icon icon-facebook"></i></a></li>
+                            <li class="member_soc-item"><a href="https://twitter.com/?lang=ru" target="_blank" rel="noreferrer nofollow" title="twitter"><i class="icon icon-twitter"></i></a></li>
+                        </ul>
+                    </li>
+                    <li class="slider_item">
+                        <div class="member_photo">
+                            <img src="#" alt="name">
+                        </div>
+                        <div class="member_name">
+                            Ida Morrison
+                        </div>
+                        <div class="member_position">
+                            Designer
+                        </div>
+                        <ul class="member_soc-list">
+                            <li class="member_soc-item"><a href="https://www.behance.net/" target="_blank" rel="noreferrer nofollow" title="behance"><i class="icon icon-behance"></i></a></li>
+                            <li class="member_soc-item"><a href="https://www.linkedin.com/" target="_blank" rel="noreferrer nofollow" title="linkedin"><i class="icon icon-linkedin2"></i></a></li>
+                            <li class="member_soc-item"><a href="https://www.instagram.com/?hl=ru" target="_blank" rel="noreferrer nofollow" title="googleplus"><i class="icon icon-google-plus"></i></a></li>
+                            <li class="member_soc-item"><a href="https://www.facebook.com/" target="_blank" rel="noreferrer nofollow" title="facebook"><i class="icon icon-facebook"></i></a></li>
+                            <li class="member_soc-item"><a href="https://twitter.com/?lang=ru" target="_blank" rel="noreferrer nofollow" title="twitter"><i class="icon icon-twitter"></i></a></li>
+                        </ul>
+                    </li>
+                    <li class="slider_item">
+                        <div class="member_photo">
+                            <img src="#" alt="name">
+                        </div>
+                        <div class="member_name">
+                            Miguel Orbien
+                        </div>
+                        <div class="member_position">
+                            CEO & Founder
+                        </div>
+                        <ul class="member_soc-list">
+                            <li class="member_soc-item"><a href="https://www.behance.net/" target="_blank" rel="noreferrer nofollow" title="behance"><i class="icon icon-behance"></i></a></li>
+                            <li class="member_soc-item"><a href="https://www.linkedin.com/" target="_blank" rel="noreferrer nofollow" title="linkedin"><i class="icon icon-linkedin2"></i></a></li>
+                            <li class="member_soc-item"><a href="https://www.instagram.com/?hl=ru" target="_blank" rel="noreferrer nofollow" title="googleplus"><i class="icon icon-google-plus"></i></a></li>
+                            <li class="member_soc-item"><a href="https://www.facebook.com/" target="_blank" rel="noreferrer nofollow" title="facebook"><i class="icon icon-facebook"></i></a></li>
+                            <li class="member_soc-item"><a href="https://twitter.com/?lang=ru" target="_blank" rel="noreferrer nofollow" title="twitter"><i class="icon icon-twitter"></i></a></li>
+                        </ul>
+                    </li>
+                    <li class="slider_item">
+                        <div class="member_photo">
+                            <img src="#" alt="name">
+                        </div>
+                        <div class="member_name">
+                            Miguel Orbien
+                        </div>
+                        <div class="member_position">
+                            CEO & Founder
+                        </div>
+                        <ul class="member_soc-list">
+                            <li class="member_soc-item"><a href="https://www.behance.net/" target="_blank" rel="noreferrer nofollow" title="behance"><i class="icon icon-behance"></i></a></li>
+                            <li class="member_soc-item"><a href="https://www.linkedin.com/" target="_blank" rel="noreferrer nofollow" title="linkedin"><i class="icon icon-linkedin2"></i></a></li>
+                            <li class="member_soc-item"><a href="https://www.instagram.com/?hl=ru" target="_blank" rel="noreferrer nofollow" title="googleplus"><i class="icon icon-google-plus"></i></a></li>
+                            <li class="member_soc-item"><a href="https://www.facebook.com/" target="_blank" rel="noreferrer nofollow" title="facebook"><i class="icon icon-facebook"></i></a></li>
+                            <li class="member_soc-item"><a href="https://twitter.com/?lang=ru" target="_blank" rel="noreferrer nofollow" title="twitter"><i class="icon icon-twitter"></i></a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </main>
 
     <script src="assets/js/main.js"></script>
 </body>
