--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </p>
             </div>
         </section>
-        <section class="about">
+        <section class="about" id="about">
             <div class="container flex">               
                 <div class="about_image-block">
                     <!-- TODO: img bg -->
@@ -54,7 +54,7 @@
                 </div>
             </div>
         </section>
-        <section class="services">
+        <section class="services" id="services">
             <div class="container grid">
                 <ul class="services_list">
                     <li class="services_item">
@@ -107,7 +107,7 @@
                 </ul>
             </div>
         </section>
-        <section class="works">
+        <section class="works" id="works">
             <!-- TODO: svg -->
             <h2 class="works_title">Recent works</h2>
             <ul class="works_slider" id="works_slider">
@@ -125,7 +125,7 @@
                 </li>
             </ul>
         </section>
-        <section class="team">
+        <section class="team" id="team">
             <div class="container">
                 <!-- TODO: svg -->
                 <h2 class="team_title">Meet our team</h2>
@@ -222,7 +222,27 @@
                 </ul>
             </div>
         </section>
+        <section class="contact" id="contact">
+            <div class="container">
+                <!-- TODO: svg -->
+                <h2 class="contact_title">Get in touch</h2>
+                <div class="contact_form-wrap">
+                    <form action="#" method="POST" name="message" class="contact_form">
+                        <input type="text" id="userName" placeholder="Your Name*">
+                        <input type="text" id="userEmail" placeholder="Your Email*">
+                        <textarea id="userMessage" placeholder="Your Message*"></textarea>
+                        <button class="btb btn-submit" id="sendInfo" type="submit"></button>
+                    </form>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer>
+        <div class="container">
+            
+        
+        </div>
+    </footer>
 
     <script src="assets/js/main.js"></script>
 </body>
