--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                         <input type="text" id="userName" placeholder="Your Name*">
                         <input type="text" id="userEmail" placeholder="Your Email*">
                         <textarea id="userMessage" placeholder="Your Message*"></textarea>
-                        <button class="btb btn-submit" id="sendInfo" type="submit"></button>
+                        <button class="btb btn-submit" id="sendInfo" type="submit">Send Message</button>
                     </form>
                 </div>
             </div>
@@ -239,8 +239,16 @@
     </main>
     <footer>
         <div class="container">
-            
-        
+            <div class="footer_copy">
+                &copy;2014 <b>tulus</b>driyo. All Rights Reserved. 
+            </div>
+            <ul class="member_soc-list soc_list">
+                <li class="member_soc-item soc_item"><a href="https://www.behance.net/" target="_blank" rel="noreferrer nofollow" title="behance"><i class="icon icon-behance"></i></a></li>
+                <li class="member_soc-item soc_item"><a href="https://www.linkedin.com/" target="_blank" rel="noreferrer nofollow" title="linkedin"><i class="icon icon-linkedin2"></i></a></li>
+                <li class="member_soc-item soc_item"><a href="https://www.instagram.com/?hl=ru" target="_blank" rel="noreferrer nofollow" title="googleplus"><i class="icon icon-google-plus"></i></a></li>
+                <li class="member_soc-item soc_item"><a href="https://www.facebook.com/" target="_blank" rel="noreferrer nofollow" title="facebook"><i class="icon icon-facebook"></i></a></li>
+                <li class="member_soc-item soc_item"><a href="https://twitter.com/?lang=ru" target="_blank" rel="noreferrer nofollow" title="twitter"><i class="icon icon-twitter"></i></a></li>
+            </ul>        
         </div>
     </footer>
 
