--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Creative digital projects</title>
     <link rel="stylesheet" href="assets/style/font.css">
+    <link rel="stylesheet" href="assets/style/style.min.css">
 </head>
 <body>
-    <header class="header">
-        <div class="container">
+    <header>
+        <div class="container header">
             <div class="header_logo">
-                <!-- TODO: IMG -->
+                <svg width="53.531" height="72">
+                    <use xlink:href="assets/svg/sprite.svg#logo"></use>
+                </svg>
             </div>
             <ul class="header_menu-list">
                 <li class="header_menu-item"><a href="#">Home</a></li>
@@ -23,7 +26,7 @@
         </div>
     </header>
     <main>
-        <section class="big-screen" id="big-screen">
+        <section class="big-screen lazy-bg" id="big-screen" data-src="assets/img/bigscreen.jpg">
             <div class="container">
                 <h1 class="big-screen_title">Creative digital projects</h1>
                 <p class="big-screen_description">
@@ -33,11 +36,18 @@
             </div>
         </section>
         <section class="about" id="about">
-            <div class="container flex">               
+            <div class="container about_content-wrap">               
                 <div class="about_image-block">
-                    <!-- TODO: img bg -->
-                    <!-- TODO svg -->
-                    <div class="about_text">About Us</div>
+                    <!-- TODO: img -->
+                    <img class="lazy"
+                        src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAEALAAAAAABAAEAAAICTAEAOw=="
+                        alt="about" data-src="assets/img/aboutBG.jpg">
+                    <div class="about_image-block_text_inner">
+                        <svg width="60" height="64">
+                            <use xlink:href="assets/svg/sprite.svg#aboutUs"></use>
+                        </svg>
+                        <div class="about_text">About Us</div>
+                    </div>
                 </div>
                 <div class="about_text-block">
                     <p class="about_description uper">
@@ -48,7 +58,8 @@
                     <p class="about_description lower">
                         <b>Morbi leo risus,</b> porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum 
                         faucibus dolor auctor. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Maecenas 
-                        faucibus mollis interdum. Cras mattis consectetur purus sit amet fermentum. Sed posuere consectetur est at lobortis.
+                        faucibus mollis interdum. Cras mattis consectetur purus sit amet <i>fermentum</i>. Sed posuere
+                        consectetur est at lobortis.
                     </p>
                     <a href="#" class="btn about_btn">Learn More</a>
                 </div>
@@ -58,7 +69,9 @@
             <div class="container grid">
                 <ul class="services_list">
                     <li class="services_item">
-                        <!-- TODO: svg -->
+                        <svg width="60" height="50">
+                            <use xlink:href="assets/svg/sprite.svg#penholder"></use>
+                        </svg>
                         <h6 class="services_title">
                             Graphic Design
                         </h6>
@@ -67,7 +80,9 @@
                         </div>
                     </li>
                     <li class="services_item">
-                        <!-- TODO: svg -->
+                        <svg width="57" height="57">
+                            <use xlink:href="assets/svg/sprite.svg#path"></use>
+                        </svg>
                         <h6 class="services_title">
                             Web Development
                         </h6>
@@ -76,7 +91,9 @@
                         </div>
                     </li>
                     <li class="services_item">
-                        <!-- TODO: svg -->
+                        <svg width="61" height="54">
+                            <use xlink:href="assets/svg/sprite.svg#globe"></use>
+                        </svg>
                         <h6 class="services_title">
                             Seo & Marketing
                         </h6>
@@ -85,7 +102,9 @@
                         </div>
                     </li>
                     <li class="services_item">
-                        <!-- TODO: svg -->
+                        <svg width="36" height="61">
+                            <use xlink:href="assets/svg/sprite.svg#mobile"></use>
+                        </svg>
                         <h6 class="services_title">
                             Mobile Development
                         </h6>
@@ -95,7 +114,9 @@
                     </li>
                     <li class="services_item">
                         <!-- TODO: bg img -->
-                        <!-- TODO: svg -->
+                        <svg width="50" height="58">
+                            <use xlink:href="assets/svg/sprite.svg#bill"></use>
+                        </svg>
                         <h6 class="services_title">
                             Our Services
                         </h6>
@@ -228,9 +249,12 @@
                 <h2 class="contact_title">Get in touch</h2>
                 <div class="contact_form-wrap">
                     <form action="#" method="POST" name="message" class="contact_form">
-                        <input type="text" id="userName" placeholder="Your Name*">
-                        <input type="text" id="userEmail" placeholder="Your Email*">
-                        <textarea id="userMessage" placeholder="Your Message*"></textarea>
+                        <input type="text" id="userName">
+                        <label for="userName">Your Name <span>*</span></label>
+                        <input type="text" id="userEmail">
+                        <label for="userEmail">Your Email <span>*</span></label>
+                        <textarea id="userMessage"></textarea>
+                        <label for="userMessage">Your Message <span>*</span></label>
                         <button class="btb btn-submit" id="sendInfo" type="submit">Send Message</button>
                     </form>
                 </div>
@@ -252,6 +276,10 @@
         </div>
     </footer>
 
+
+
+    <script src="assets/js/intersection-observer.js"></script>
+    <script src="assets/js/lazyload.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 </html>
