--- a/index.html
+++ b/index.html
@@ -104,7 +104,16 @@
     <link rel="stylesheet" href="assets/style/hamburger.min.css">
     <link rel="stylesheet" href="assets/style/style.min.css">
     <!-- OG -->
-
+        <meta property="og:locale" content="uk_UA">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Creative digital projects">
+        <meta property="og:description" content="Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.">
+        <meta name="description" content="Nullam quis risus eget urna mollis ornare vel eu leo. Donec id elit non mi porta gravida at eget metus. Donec ullamcorper nulla non metus auctor fringilla. ">
+        <meta property="og:url" content="https://gadkiy.github.io/Exam2/">
+        <meta property="og:site_name" content="Creative digital projects">
+        <meta property="og:image:width" content="600">
+        <meta property="og:image:height" content="600">
+        <meta property="og:image" content="https://gadkiy.github.io/Exam2/assets/img/siteimage.jpg">
     <!-- favicon -->
     <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
